--- a/static/MyCV.html
+++ b/static/MyCV.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>My Resume</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="css/w3.css">
 <link rel='stylesheet' href="css/Roboto.css">
 <link rel="stylesheet" href="bootstrap/fonts/font-awesome.min.css">
+<link rel="stylesheet" href="css/user.css
 <style>
   h1,
   h2,
@@ -17,14 +18,6 @@
   i {
     float: none;
   }
-  #closeTab{
-		opacity: 0.6;
-		margin: 10px;
-		right: 0;
-		top: 0;
-		position: fixed;
-		z-index:1;
-	}
 </style>
 <body class="w3-light-grey">
       <!-- Page Container -->
@@ -35,7 +28,7 @@
           <div class="w3-third">
             <div class="w3-white w3-text-grey w3-card-4">
               <div class="w3-display-container">
-                <img src="static/img/Foto.JPG" style="width:100%" alt="Avatar">
+                <img src="img/Foto.JPG" style="width:100%" alt="Avatar">
                 <div class="w3-display-bottomleft w3-container w3-text-black">
                   <h2 style="color:white">Dilan Ramadhan</h2>
                 </div>
